k8s-apps/radarr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/managed-by: argocd
